--- a/assets/stylesheets/flags-large.css
+++ b/assets/stylesheets/flags-large.css
@@ -24,7 +24,7 @@
 .language-picker.large i.bg-BG, .language-picker.large i.bg {background-position: -175px 0}
 .language-picker.large i.pt-BR {background-position: 0 -15px}
 .language-picker.large i.be-BY, .language-picker.large i.be {background-position: -25px -15px}
-.language-picker.large i.fr-CA {background-position: -50px -15px}
+.language-picker.large i.en-CA, .language-picker.large i.fr-CA {background-position: -50px -15px}
 .language-picker.large i.zh-CN, .language-picker.large i.zh {background-position: -75px -15px}
 .language-picker.large i.cs-CZ, .language-picker.large i.cs {background-position: -100px -15px}
 .language-picker.large i.de-DE, .language-picker.large i.de {background-position: -125px -15px}
